force-app/main/default/objects/Formulary__c/Formulary__c.object-meta.xml
<CustomObject>
    <label>Formulary</label>
    <nameField>
        <displayFormat>MRF-{0000}</displayFormat>
        <label>Formulary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Formulary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>