force-app/main/default/objects/Formulary__c/fields/Backorder__c.field-meta.xml
<CustomField>
    <fullName>Backorder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backorder</label>
    <type>Checkbox</type>
</CustomField>