force-app/main/default/objects/Formulary__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <inlineHelpText>if applicable</inlineHelpText>
    <label>Brand Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>