force-app/main/default/objects/Formulary__c/fields/Dosage_Form__c.field-meta.xml
<CustomField>
    <fullName>Dosage_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dosage Form</label>
    <referenceTo>Dosage_Form__c</referenceTo>
    <relationshipLabel>Formulary</relationshipLabel>
    <relationshipName>Formulary</relationshipName>
    <type>Lookup</type>
</CustomField>