force-app/main/default/objects/Formulary__c/fields/Formulary_Title__c.field-meta.xml
<CustomField>
    <fullName>Formulary_Title__c</fullName>
    <formula>IF(ISBLANK(Brand_Name__c), Name, Brand_Name__c + &apos; (&apos; + Name + &apos;)&apos;) + &apos; &apos; +  TEXT(Strength__c) + &apos; &apos; +   Unit_of_Measurement__r.Name + &apos; &apos; +  Dosage_Form__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formulary Title</label>
    <type>Text</type>
</CustomField>