force-app/main/default/objects/Formulary__c/fields/InventoryNo__c.field-meta.xml
<CustomField>
    <fullName>InventoryNo__c</fullName>
    <formula>Inventory__r.Inventory_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InventoryNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>