force-app/main/default/objects/Formulary__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Manufacturer__c</referenceTo>
    <relationshipLabel>Formulary</relationshipLabel>
    <relationshipName>Formulary</relationshipName>
    <type>Lookup</type>
</CustomField>