force-app/main/default/objects/Formulary__c/fields/MFR__c.field-meta.xml
<CustomField>
    <fullName>MFR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MFR</label>
    <referenceTo>MFR__c</referenceTo>
    <relationshipLabel>Formulary</relationshipLabel>
    <relationshipName>Formulary</relationshipName>
    <type>Lookup</type>
</CustomField>