force-app/main/default/objects/Formulary__c/fields/Strength__c.field-meta.xml
<CustomField>
    <fullName>Strength__c</fullName>
    <label>Strength</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>