force-app/main/default/objects/Formulary__c/fields/Unit_of_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measurement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measurement</label>
    <referenceTo>Unit_of_Measurement__c</referenceTo>
    <relationshipLabel>Formulary</relationshipLabel>
    <relationshipName>Formulary</relationshipName>
    <type>Lookup</type>
</CustomField>