force-app/main/default/objects/Formulary__c/validationRules/Compounded_Type_Formulary_Must_Have_MFR.validationRule-meta.xml
<ValidationRule>
    <fullName>Compounded_Type_Formulary_Must_Have_MFR</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Type__c , &apos;Compounded&apos;) &amp;&amp;
ISBLANK(MFR__c)</errorConditionFormula>
    <errorDisplayField>MFR__c</errorDisplayField>
    <errorMessage>You must assign MFR for every compounded preparation</errorMessage>
</ValidationRule>