force-app/main/default/objects/Formulary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Formulary_Title__c</columns>
    <columns>Brand_Name__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Dosage_Form__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>